Initial VPC configuration
